--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 crossterm = "0.27"
 rand = "0.8.5"
 clap = { version = "4.5.4", features = ["derive"]}
+
+[target.aarch64-unknown-linux-gnu]
+linker = "aarch64-linux-gnu-gcc"
