--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,10 @@ jobs:
         if: matrix.target == 'aarch64-unknown-linux-gnu'
         run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
 
+      - name: Cross-compilation Setup (Linux ARM only)
+        if: matrix.target == 'aarch64-unknown-linux-gnu'
+        run: rustup target add aarch64-unknown-linux-gnu
+
       - name: Build release binary
         run: cargo build --release --target ${{ matrix.target }}
 
